--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,6 +8,7 @@ option('debug_log_cpuid',                 type: 'boolean', value: true)
 option('debug_log_acpi',                  type: 'boolean', value: true)
 option('debug_log_pci',                   type: 'boolean', value: true)
 option('debug_spinlock_dep',              type: 'boolean', value: true)
+option('debug_stl_assert',                type: 'boolean', value: true)
 
 option('slab_min_order',                  type: 'integer', min: 4,    value: 6)
 option('slab_max_order',                  type: 'integer', max: 16,   value: 12)
