term: switched to limine's freestanding terminal

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libimpl/memory-allocator"]
 	path = libimpl/memory-allocator
 	url = git@github.com:FloweyTheFlower420/memory-allocator.git
+[submodule "terminal"]
+	path = terminal
+	url = https://github.com/limine-bootloader/terminal.git
