interrupt: restore registers correctly on exit

--- a/arch/x86/idt/idt.S.in
+++ b/arch/x86/idt/idt.S.in
@@ -64,8 +64,6 @@ idt_common:
 
     // setup stack frame
     andq $~0x7, %rsp
-    push $0 // dummy operation (for padding reasons)
-    push $1 // notate base-pointer type
     movq %rsp, %rbp
 
     // do gs stuff
@@ -112,9 +110,6 @@ idt_common:
     movq (0x28 + 0x8 * 12)(%rax), %r14
     movq (0x28 + 0x8 * 13)(%rax), %r15
     movq (0x28 + 0x8 * 14)(%rax), %rbp
-    movq (0x28 + 0x8 + 0)(%rax), %rax
-
+    movq (0x28 + 0x8 * 0)(%rax), %rax
     iretq
 
-.align 0x10
-idt_entry_start:
