interrupt: use common c++ handler instead of asm trampoline

--- a/config.h.in
+++ b/config.h.in
@@ -6,6 +6,10 @@ using config = ctcfg::config_holder<
     ctcfg::string_entry<"version.version", "@VERSION@">,
     ctcfg::string_entry<"version.git-info", "$GIT_VERSION_INFO">,
     ctcfg::string_entry<"version.full-version", "@VERSION@-$GIT_VERSION_INFO">,
+    ctcfg::string_entry<"version.cc.id", "@COMPILER_C_ID@">,
+    ctcfg::string_entry<"version.cc.ver", "@COMPILER_C_VER@">,
+    ctcfg::string_entry<"version.cxx.id", "@COMPILER_CXX_ID@">,
+    ctcfg::string_entry<"version.cxx.ver", "@COMPILER_CXX_VER@">,
     ctcfg::string_entry<"arch", "@ARCH@">,
     ctcfg::string_entry<"arch-path", "@ARCH_PATH@">,
     ctcfg::size_entry<"pmm-count", @PMM_COUNT@>,
